--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -163,12 +163,12 @@ sidebar_position: 1
 | 2022.9.26  | 新闻    | 闹钟 TV-『Dr.コトー診療所』                                                                                                                                                              |                               [熟](https://weibo.com/5177703789/M7vNov4Ku)                               |
 | 2022.9.26  | 新闻    | nonstop-『Dr.コトー診療所』                                                                                                                                                              |                          [熟](https://weibo.com/tv/show/1034:4818308571267143)                           |
 | 2022.10.1  | 音乐    | 『Venue101EXTRA』NHK 東京ホール放送#1 嘉宾:ITZY『BlahBlahBlah』 SaucyDog『優しさに溢れた世界で』 milet『insideyou』『FinalCall』 YOAKE『ねぇ』 Liella!『WEWILL!!』                       |                            [生](https://www.bilibili.com/video/BV1iN4y1N7CD)                             |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
-| 2022.10.3  | 番组    | 富士电视台「PICU 小児集中治療室 これを見れば予習完璧スペシャル！」14:45 ～ 15:45                                                                                                         |                            [生](https://www.bilibili.com/video/BV1hT411K7aU/)                            |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
+| 2022.10.3  | 番组    | 富士电视台「PICU 小児集中治療室 これを見れば予習完璧スペシャル！」14:45 ～ 15:45                                                                                                         |                            [熟](https://weibo.com/tv/show/1034:4821195263246349)                            |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
 | 2022.10.4  | CM      | 『e.design 事故保险』「发生事故的时候也安心篇」                                                                                                                                          |                               [CM](https://weibo.com/5177703789/M8ISWud5V)                               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
 | 2022.10.8 | 番组 | 富士电视台「ドラマツアーズ2022秋 ～豪華俳優陣勢ぞろい月9＆月10SP～」 14:30～15:25        |  [熟](https://weibo.com/tv/show/1034:4822511909797918)              |          |
 | 2022.10.8 | 音乐 | 『MUSIC FAIR』「ルージュの伝言」(「魔女の宅急便」)  18:00           |     [熟](https://www.bilibili.com/video/BV15T411N7Ht)                              |                                          |
 | 2022.10.8 | 音乐 | 『Venue101EXTRA』NHK東京ホール放送#2   嘉宾:ao『チェンジ』 04LimitedSazabys『Keepgoing』 JO1『SuperCali』 ハマいく『ビートDEトーヒ』   |    [生](https://www.bilibili.com/video/BV1eB4y1j7jw)         |  [副音轨](https://pan.baidu.com/s/1mLjS8gZKhZKMoQLoBcNQqQ?pwd=0122)         |
-| 2022.10.9 | 番组   | フジテレビ「絶対！見たくな〜るTV」26:00〜26:10   |       |                      |
+| 2022.10.9 | 番组   | フジテレビ「絶対！見たくな〜るTV」26:00〜26:10   | [生](https://www.bilibili.com/video/BV12e41157CM)      |                      |
 | 2022.10.10 | 电视剧   | 富士电视台『PICU 小児集中治療室』#1 21:00~   |       |                      |
 | 2022.10.17 | 电视剧   | 富士电视台『PICU 小児集中治療室』#2 21:00~   |       |                      |
 | 2022.10.22 | 音乐   | 『Venue101』 MC 23:00~   |        |                      |
