--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -8,19 +8,7 @@ sidebar_position: 1
 
 2022 年基本更新完毕，根据日后行程随时进行更新。
 
-- 未播出**详情**里会写出一些节目的**具体播出**时间，等**播出之后**会转移到**备注**。
 
-## 更新记录
-
-更新记录只用写 **日期 + 标题** + **简易说明** 就可以（标题太长可缩减一部分，活用网页快捷键 `Ctrl + F`）
-
-- **新增**
-  - **2022.1.8** → Making of MTV Unplugged - 替换为熟肉网盘
-  - **2022.1.22** → 【HIKAKIN GAMES】- 熟肉链接
-  - **2022.2.28** → 行骗天下 TV-泪的大 Hit 感謝祭
-  - **2022.2.28** → 2012.8.13「乃木坂 46 Live in Osaka ～がんばれ！今野～」
-  - **2022.3.13** → 生田絵梨花の乱
-  - **2022.3.5/3.19/3.26** → MUSIC FAIR 相关
 
 ## 2022
 
@@ -169,7 +157,8 @@ sidebar_position: 1
 | 2022.10.8 | 音乐 | 『MUSIC FAIR』「ルージュの伝言」(「魔女の宅急便」)  18:00           |     [熟](https://www.bilibili.com/video/BV15T411N7Ht)                              |                                          |
 | 2022.10.8 | 音乐 | 『Venue101EXTRA』NHK東京ホール放送#2   嘉宾:ao『チェンジ』 04LimitedSazabys『Keepgoing』 JO1『SuperCali』 ハマいく『ビートDEトーヒ』   |    [生](https://www.bilibili.com/video/BV1eB4y1j7jw)         |  [副音轨](https://pan.baidu.com/s/1mLjS8gZKhZKMoQLoBcNQqQ?pwd=0122)         |
 | 2022.10.9 | 番组   | フジテレビ「絶対！見たくな〜るTV」26:00〜26:10   | [生](https://www.bilibili.com/video/BV12e41157CM)      |                      |
-| 2022.10.10 | 电视剧   | 富士电视台『PICU 小児集中治療室』#1 21:00~   |       |                      |
+| 2022.10.10 | 电视剧   | 富士电视台『PICU 小児集中治療室』#1 21:00~   | [霸王龙压制](https://t-rex.tzfile.com/7344.html)      |                      |
+| 2022.10.14   | CM      | Apuweiser-riche Winter 发表                                                                                                                                                              |                     [网盘](https://pan.baidu.com/s/1mjN_7KLrGFqA-A7D1j0e6A?pwd=0122)                     | [Apuweiser-riche 官网](https://ap-story.jp/cts/apuweiser-riche/221014_apu_catalog.html)           |
 | 2022.10.17 | 电视剧   | 富士电视台『PICU 小児集中治療室』#2 21:00~   |       |                      |
 | 2022.10.22 | 音乐   | 『Venue101』 MC 23:00~   |        |                      |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
