--- a/docs/years/2023.md
+++ b/docs/years/2023.md
@@ -10,6 +10,6 @@ sidebar_position: 2
 
 | 🗓 日期    | 📌 分类 | 💛 详情                                                                      | 🔗 链接 | 🔨 备注                                                    |
 | :-------- | :------ | :--------------------------------------------------------------------------- | :-----: | ---------------------------------------------------------- |
-| 2023.1.30 | 音乐剧  | 『MEAN GIRLS』【東京】東京建物 Brillia HALL（豊島区立芸術文化劇場）(～ 2.12) |         | [详细日程](https://musical-meangirls.jp/schedule.html****) |
+| 2023.1.30 | 音乐剧  | 『MEAN GIRLS』【東京】東京建物 Brillia HALL（豊島区立芸術文化劇場）(～ 2.12) |         | [详细日程](https://musical-meangirls.jp/schedule.html) |
 | 2023.2.17 | 音乐剧  | 『MEAN GIRLS』【福岡】キャナルシティ劇場(～ 2.19)                            |         |                                                            |
 | 2023.2.23 | 音乐剧  | 『MEAN GIRLS』【大阪】森ノ宮ピロティホール(～ 2.27)                          |         |                                                            |
