--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -160,6 +160,7 @@ sidebar_position: 1
 | 2022.10.10 | 电视剧   | 富士电视台『PICU 小児集中治療室』#1 21:00~   | [霸王龙压制](https://t-rex.tzfile.com/7344.html)      |                      |
 | 2022.10.14   | CM      | Apuweiser-riche Winter 发表                                                                                                                                                              |                     [网盘](https://pan.baidu.com/s/1mjN_7KLrGFqA-A7D1j0e6A?pwd=0122)                     | [Apuweiser-riche 官网](https://ap-story.jp/cts/apuweiser-riche/221014_apu_catalog.html)           |
 | 2022.10.17 | 电视剧   | 富士电视台『PICU 小児集中治療室』#2 21:00~   |       |                      |
+| 2022.10.18  | 新闻    | バリはやッ！ＺＩＰ！『映画かいけつゾロリ』                                                                                                                                                              |                               [生](https://pan.baidu.com/s/1BQO0h4awrSIXtVdpVHsV1A?pwd=0122)                               |
 | 2022.10.22 | 音乐   | 『Venue101』 MC 23:00~   |        |                      |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
 | 2022.12.16 | 电影    | 『Dr.コトー診療所』劇場版上映                                                                                                                                                            |                                                                                                          | [周刊 FLASH](https://weibo.com/5177703789/LyH23DhYx) [日刊 sports](https://weibo.com/5177703789/M7t650QM9) [评论翻译](https://weibo.com/5177703789/M7vYY0MzB)                                                                                                                                                                                                                                                                                                                                                                                                              |
