--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -161,7 +161,7 @@ sidebar_position: 1
 | 2022.10.14   | CM      | Apuweiser-riche Winter 发表                                                                                                                                                              |                     [网盘](https://pan.baidu.com/s/1mjN_7KLrGFqA-A7D1j0e6A?pwd=0122)                     | [Apuweiser-riche 官网](https://ap-story.jp/cts/apuweiser-riche/221014_apu_catalog.html)           |
 | 2022.10.17 | 电视剧   | 富士电视台『PICU 小児集中治療室』#2 21:00~   |       |                      |
 | 2022.10.18  | 新闻    | バリはやッ！ＺＩＰ！『映画かいけつゾロリ』                                                                                                                                                              |                               [生](https://pan.baidu.com/s/1BQO0h4awrSIXtVdpVHsV1A?pwd=0122)                               |
-| 2022.10.22 | 音乐   | 『Venue101』 MC 23:00~   |        |                      |
+| 2022.10.22 | 音乐   | 『Venue101』 MC 23:00~ 嘉宾:美炎‐BIEN‐『fire nose..』 eill『フィナーレ』 Tani Yuuki『もう一度』 |  [生](https://pan.baidu.com/s/1rZ15EfbNBxYbLSOgSRqtEg?pwd=0122)      |                      |
 | 2022.10.24 | 电视剧   | 富士电视台『PICU 小児集中治療室』#3 21:00~   |       |                      |
 | 2022.10.28   | 番组    | 传说中的客人【生甜甜圈＆梦幻蒙布朗！的受欢迎到派对的最佳店面best5】21:00～21:58    |                                     |               |
 | 2022.10.29 | 音乐   | 『Venue101』 MC 23:00~   |        |                      |
@@ -174,5 +174,8 @@ sidebar_position: 1
 | 2022.11.21 | 电视剧   | 富士电视台『PICU 小児集中治療室』#7 21:00~   |       |                      |
 | 2022.11.26 | 音乐   | 『Venue101』 MC 23:00~   |        |                      |
 | 2022.11.28 | 电视剧   | 富士电视台『PICU 小児集中治療室』#8 21:00~   |       |                      |
+| 2022.12.3   | FC      | 『Erika Ikuta 2022 winter fun』Zepp Osaka Bayside（OSAKA）OPEN 13:00 / START 14:00   |    |    |
+| 2022.8.6   | FC      | 『Erika Ikuta 2022 winter fun』KT Zepp Yokohama（YOKOHAMA）OPEN 14:00 / START 15:00   |    |    |
+| 2022.8.6   | FC      | 『Erika Ikuta 2022 winter fun』KT Zepp Yokohama（YOKOHAMA）OPEN 18:00 / START 19:00  |    |    |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
 | 2022.12.16 | 电影    | 『Dr.コトー診療所』劇場版上映                                                                                                                                                            |                                                                                                          | [周刊 FLASH](https://weibo.com/5177703789/LyH23DhYx) [日刊 sports](https://weibo.com/5177703789/M7t650QM9) [评论翻译](https://weibo.com/5177703789/M7vYY0MzB)                                                                                                                                                                                                                                                                                                                                                                                                              |
