--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -141,12 +141,12 @@ sidebar_position: 1
 | 2022.8.7   | 电视剧  | 『OLD ROOKIE』#6 21:00~                                                                                                                                                                  |                            [cut](https://www.bilibili.com/video/BV1fG4y1h7gY)                            |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
 | 2022.8.14  | 电视剧  | 『OLD ROOKIE』#7 21:00~                                                                                                                                                                  |                            [cut](https://www.bilibili.com/video/BV1FS4y1W7k3)                            |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
 | 2022.8.21  | 电视剧  | 『OLD ROOKIE』#8 21:00~                                                                                                                                                                  |                            [cut](https://www.bilibili.com/video/BV1RU4y1r7BY)                            |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
-| 2022.8.27  | 音乐    | 『Venue101』 MC 23:00~ 嘉宾:INI『Password』AyumuImazu『Tangerine』セイレム・イリース『MadatDisney』                                                                                      |                            [生](https://www.bilibili.com/video/BV1FB4y1G762)                             |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
+| 2022.8.27  | 音乐    | 『Venue101』#12 MC 23:00~ 嘉宾:INI『Password』AyumuImazu『Tangerine』セイレム・イリース『MadatDisney』                                                                                      |                            [生](https://www.bilibili.com/video/BV1FB4y1G762)                             |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
 | 2022.8.28  | 电视剧  | 『OLD ROOKIE』#9 21:00~                                                                                                                                                                  |                            [cut](https://www.bilibili.com/video/BV1fd4y1g7h5)                            |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
-| 2022.9.3   | 音乐    | 『Venue101』 MC 23:00~ 嘉宾:Creepy Nuts『堕天』Kep1er『WingWing』BiSH『サヨナラサラバ』                                                                                                  |                      [生](https://pan.baidu.com/s/1fVLOxH75ufTkE8Q-b0Q7Kg?pwd=0122)                      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
+| 2022.9.3   | 音乐    | 『Venue101』#13 MC 23:00~ 嘉宾:Creepy Nuts『堕天』Kep1er『WingWing』BiSH『サヨナラサラバ』                                                                                                  |                      [生](https://pan.baidu.com/s/1fVLOxH75ufTkE8Q-b0Q7Kg?pwd=0122)                      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
 | 2022.9.4   | 电视剧  | 『OLD ROOKIE』#10 21:00~                                                                                                                                                                 |                            [cut](https://www.bilibili.com/video/BV1j14y1e7yK)                            |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
-| 2022.9.10  | 音乐    | 『Venue101』 MC 23:00~ 嘉宾:櫻坂 46『摩擦係数』GENERATIONS『チカラノカギリ』水曜日のカンパネラ『エジソン』                                                                               |                              [cut](https://weibo.com/5177703789/M5ixtgKma)                               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
-| 2022.9.17  | 音乐    | 『Venue101』 MC 23:00~ 嘉宾:DISH『Replay』Rules feat. 土屋太鳳『TAIKING』Snow Man『Juicy』                                                                                               |                      [生](https://pan.baidu.com/s/1mkAzBagKoKkwu2cSN5xKdQ?pwd=0122)                      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
+| 2022.9.10  | 音乐    | 『Venue101』#14 MC 23:00~ 嘉宾:櫻坂 46『摩擦係数』GENERATIONS『チカラノカギリ』水曜日のカンパネラ『エジソン』                                                                               |                              [cut](https://weibo.com/5177703789/M5ixtgKma)                               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
+| 2022.9.17  | 音乐    | 『Venue101』#15 MC 23:00~ 嘉宾:DISH『Replay』Rules feat. 土屋太鳳『TAIKING』Snow Man『Juicy』                                                                                               |                      [生](https://pan.baidu.com/s/1mkAzBagKoKkwu2cSN5xKdQ?pwd=0122)                      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
 | 2022.9.24  | 音乐    | 『Venue101EXTRA』東京 NHK ホール公開収録                                                                                                                                                 |                                                                                                          |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
 | 2022.9.26  | 新闻    | 闹钟 TV-『Dr.コトー診療所』                                                                                                                                                              |                               [熟](https://weibo.com/5177703789/M7vNov4Ku)                               |
 | 2022.9.26  | 新闻    | nonstop-『Dr.コトー診療所』                                                                                                                                                              |                          [熟](https://weibo.com/tv/show/1034:4818308571267143)                           |
@@ -157,22 +157,24 @@ sidebar_position: 1
 | 2022.10.8 | 音乐 | 『MUSIC FAIR』「ルージュの伝言」(「魔女の宅急便」)  18:00           |     [熟](https://www.bilibili.com/video/BV15T411N7Ht)                              |                                          |
 | 2022.10.8 | 音乐 | 『Venue101EXTRA』NHK東京ホール放送#2   嘉宾:ao『チェンジ』 04LimitedSazabys『Keepgoing』 JO1『SuperCali』 ハマいく『ビートDEトーヒ』   |    [生](https://www.bilibili.com/video/BV1eB4y1j7jw)         |  [副音轨](https://pan.baidu.com/s/1mLjS8gZKhZKMoQLoBcNQqQ?pwd=0122)         |
 | 2022.10.9 | 番组   | フジテレビ「絶対！見たくな〜るTV」26:00〜26:10   | [微博](https://weibo.com/6515472212/MataSm2zb)     |                      |
-| 2022.10.10 | 电视剧   | 富士电视台『PICU 小児集中治療室』#1 21:00~   | [霸王龙压制](https://t-rex.tzfile.com/7344.html)      |                      |
+| 2022.10.10 | 电视剧   | 富士电视台『PICU 小児集中治療室』#1 21:00~   | [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)     |                      |
 | 2022.10.14   | CM      | Apuweiser-riche Winter 发表                                                                                                                                                              |                     [网盘](https://pan.baidu.com/s/1mjN_7KLrGFqA-A7D1j0e6A?pwd=0122)                     | [Apuweiser-riche 官网](https://ap-story.jp/cts/apuweiser-riche/221014_apu_catalog.html)           |
-| 2022.10.17 | 电视剧   | 富士电视台『PICU 小児集中治療室』#2 21:00~   |       |                      |
+| 2022.10.17 | 电视剧   | 富士电视台『PICU 小児集中治療室』#2 21:00~   |  [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)     |                      |
 | 2022.10.18  | 新闻    | バリはやッ！ＺＩＰ！『映画かいけつゾロリ』                                                                                                                                                              |                               [生](https://pan.baidu.com/s/1BQO0h4awrSIXtVdpVHsV1A?pwd=0122)                               |
-| 2022.10.22 | 音乐   | 『Venue101』 MC 23:00~ 嘉宾:美炎‐BIEN‐『fire nose..』 eill『フィナーレ』 Tani Yuuki『もう一度』 |  [生](https://pan.baidu.com/s/1rZ15EfbNBxYbLSOgSRqtEg?pwd=0122)      |                      |
-| 2022.10.24 | 电视剧   | 富士电视台『PICU 小児集中治療室』#3 21:00~   |       |                      |
+| 2022.10.22 | 音乐   | 『Venue101』#16 MC 23:00~ 嘉宾:美炎‐BIEN‐『fire nose..』 eill『フィナーレ』 Tani Yuuki『もう一度』 |  [生](https://pan.baidu.com/s/1rZ15EfbNBxYbLSOgSRqtEg?pwd=0122)      |                      |
+| 2022.10.24 | 电视剧   | 富士电视台『PICU 小児集中治療室』#3 21:00~   | [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)      |                      |
+| 2022.10.27   | 新闻    | 闹钟TV-『Dr.コトー診療所』  |   [生](https://pan.baidu.com/s/1Deh0sPX128Sccf5B458gKw?pwd=0122)     |    |
+| 2022.10.27   | 新闻    | NONSTOP-『Dr.コトー診療所』  |     [生](https://pan.baidu.com/s/1Deh0sPX128Sccf5B458gKw?pwd=0122)       |    |
 | 2022.10.28   | 番组    | 传说中的客人【生甜甜圈＆梦幻蒙布朗！的受欢迎到派对的最佳店面best5】21:00～21:58    |                                     |               |
-| 2022.10.29 | 音乐   | 『Venue101』 MC 23:00~   |        |                      |
+| 2022.10.29 | 音乐   | 『Venue101』#17 MC 23:00~   |        |                      |
 | 2022.10.31 | 电视剧   | 富士电视台『PICU 小児集中治療室』#4 21:00~   |       |                      |
-| 2022.11.5 | 音乐   | 『Venue101』 MC 23:00~   |        |                      |
+| 2022.11.5 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.11.7 | 电视剧   | 富士电视台『PICU 小児集中治療室』#5 21:00~   |       |                      |
-| 2022.11.12 | 音乐   | 『Venue101』 MC 23:00~   |        |                      |
+| 2022.11.12 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.11.14 | 电视剧   | 富士电视台『PICU 小児集中治療室』#6 21:00~   |       |                      |
-| 2022.11.19 | 音乐   | 『Venue101』 MC 23:00~   |        |                      |
+| 2022.11.19 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.11.21 | 电视剧   | 富士电视台『PICU 小児集中治療室』#7 21:00~   |       |                      |
-| 2022.11.26 | 音乐   | 『Venue101』 MC 23:00~   |        |                      |
+| 2022.11.26 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.11.28 | 电视剧   | 富士电视台『PICU 小児集中治療室』#8 21:00~   |       |                      |
 | 2022.12.3   | FC      | 『Erika Ikuta 2022 winter fun』Zepp Osaka Bayside（OSAKA）OPEN 13:00 / START 14:00   |    |    |
 | 2022.8.6   | FC      | 『Erika Ikuta 2022 winter fun』KT Zepp Yokohama（YOKOHAMA）OPEN 14:00 / START 15:00   |    |    |
