--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -167,10 +167,11 @@ sidebar_position: 1
 | 2022.10.27   | 新闻    | 闹钟TV-『Dr.コトー診療所』  |   [生](https://pan.baidu.com/s/1Deh0sPX128Sccf5B458gKw?pwd=0122)     |    |
 | 2022.10.27   | 新闻    | NONSTOP-『Dr.コトー診療所』  |     [生](https://pan.baidu.com/s/1Deh0sPX128Sccf5B458gKw?pwd=0122)       |    |
 | 2022.10.28   | 番组    | 传说中的客人【生甜甜圈＆梦幻蒙布朗！的受欢迎到派对的最佳店面best5】21:00～21:58    |  [生](https://pan.baidu.com/s/15VXoshryldU5lAJnC7G1ng?pwd=0122)    |  [tver](https://tver.jp/episodes/ephjz7esv1)             |
-| 2022.10.29 | 音乐   | 『Venue101』#17 MC 23:00~   |        |                      |
+| 2022.10.29   | 新闻    | 闹钟TV-『Dr.コトー診療所』  |   [生](https://pan.baidu.com/s/1sLAYd8cQF2eV7n4NsHo4wg?pwd=0122)     |    |
+| 2022.10.29 | 音乐   | 『Venue101』#17 MC 23:00~ 嘉宾:THERAMPAGE『ツナゲキズナ』 ドレスコーズ『やりすぎた天使』 有華『Partner』|        |                      |
 | 2022.10.31 | 电视剧   | 富士电视台『PICU 小児集中治療室』#4 21:00~   |       |                      |
 | 2022.11.4   | 番组    | 熱狂！1/365のマニアさん 19:00～    |                                     |               |
-| 2022.11.5 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
+| 2022.11.5 | 音乐   | 『Venue101』#18 MC 23:00~ 嘉宾:日向坂46『月と星が踊るMidnight』 藤原さくら『まばたき』 緑黄色社会『ミチヲユケ』  |        |                      |
 | 2022.11.7 | 电视剧   | 富士电视台『PICU 小児集中治療室』#5 21:00~   |       |                      |
 | 2022.11.12 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.11.14 | 电视剧   | 富士电视台『PICU 小児集中治療室』#6 21:00~   |       |                      |
