--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -169,7 +169,8 @@ sidebar_position: 1
 | 2022.10.28   | 番组    | 传说中的客人【生甜甜圈＆梦幻蒙布朗！的受欢迎到派对的最佳店面best5】21:00～21:58    |  [生](https://pan.baidu.com/s/15VXoshryldU5lAJnC7G1ng?pwd=0122)    |  [tver](https://tver.jp/episodes/ephjz7esv1)             |
 | 2022.10.29   | 新闻    | 闹钟TV-『Dr.コトー診療所』  |   [生](https://pan.baidu.com/s/1sLAYd8cQF2eV7n4NsHo4wg?pwd=0122)     |    |
 | 2022.10.29 | 音乐   | 『Venue101』#17 MC 23:00~ 嘉宾:THERAMPAGE『ツナゲキズナ』 ドレスコーズ『やりすぎた天使』 有華『Partner』|[生](https://pan.baidu.com/s/1PAhtR-ZJCJsFivpRuu8Nbg?pwd=0122)        |                      |
-| 2022.10.31 | 电视剧   | 富士电视台『PICU 小児集中治療室』#4 21:00~   |       |                      |
+| 2022.10.31 | 电视剧   | 富士电视台『PICU 小児集中治療室』#4 21:00~   | [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)      |                      |
+| 2022.11.1  | CM      | 『e.design 事故保险』「真心想创造的安心感和体验篇」 |    [CM](https://weibo.com/5177703789/McZxxxlAj)    | [油管](https://www.youtube.com/watch?v=eu8PGn0W26A) |
 | 2022.11.4   | 番组    | 熱狂！1/365のマニアさん 19:00～    |                                     |               |
 | 2022.11.5 | 音乐   | 『Venue101』#18 MC 23:00~ 嘉宾:日向坂46『月と星が踊るMidnight』 藤原さくら『まばたき』 緑黄色社会『ミチヲユケ』  |        |                      |
 | 2022.11.7 | 电视剧   | 富士电视台『PICU 小児集中治療室』#5 21:00~   |       |                      |
@@ -182,6 +183,7 @@ sidebar_position: 1
 | 2022.11.28 | 电视剧   | 富士电视台『PICU 小児集中治療室』#8 21:00~   |       |                      |
 | 2022.12.3   | FC      | 『Erika Ikuta 2022 winter fun』Zepp Osaka Bayside（OSAKA）OPEN 13:00 / START 14:00   |    |    |
 | 2022.12.3 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
+| 2022.12.7 | 音乐   | 『映画かいけつゾロリ ラララ♪スターたんじょう オリジナルサウンドトラック＋α』発売＆配信決定   |        |   [链接](https://columbia.jp/prod-info/COCX-41936/)                   |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
 | 2022.12.10 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.12.11   | FC      | 『Erika Ikuta 2022 winter fun』KT Zepp Yokohama（YOKOHAMA）OPEN 14:00 / START 15:00   |    |    |
