--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -172,6 +172,7 @@ sidebar_position: 1
 | 2022.10.31 | 电视剧   | 富士电视台『PICU 小児集中治療室』#4 21:00~   | [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)      |                      |
 | 2022.11.1  | CM      | 『e.design 事故保险』「真心想创造的安心感和体验篇」 |    [CM](https://weibo.com/5177703789/McZxxxlAj)    | [油管](https://www.youtube.com/watch?v=eu8PGn0W26A) |
 | 2022.11.1  | 杂志   | 『ステージぴあ』11+12月号 |    [ebook](https://t.pia.jp/pia/events/stagepia)    |   |
+| 2022.11.3   | 番组    | VS魂 19:00～    |                                     |               |
 | 2022.11.4   | 番组    | 熱狂！1/365のマニアさん 19:00～    |                                     |               |
 | 2022.11.5 | 音乐   | 『Venue101』#18 MC 23:00~ 嘉宾:日向坂46『月と星が踊るMidnight』 藤原さくら『まばたき』 緑黄色社会『ミチヲユケ』  |        |                      |
 | 2022.11.7 | 电视剧   | 富士电视台『PICU 小児集中治療室』#5 21:00~   |       |                      |
