--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -177,11 +177,11 @@ sidebar_position: 1
 | 2022.11.7 | 电视剧   | 富士电视台『PICU 小児集中治療室』#5 21:00~   |       |                      |
 | 2022.11.12 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.11.14 | 电视剧   | 富士电视台『PICU 小児集中治療室』#6 21:00~   |       |                      |
-| 2022.11.15 | 电影   | 『映画かいけつゾロリ　ラララ♪スターたんじょう』完成披露上映会***待确认***   |       |  [来源](https://t.pia.jp/pia/event/event.do?eventCd=2238265)       |
 | 2022.11.17 | 番组    | VS魂 19:00～    |                                     |               |
 | 2022.11.19 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.11.21 | 电视剧   | 富士电视台『PICU 小児集中治療室』#7 21:00~   |       |                      |
 | 2022.11.22  | 杂志   | 『美的』1月号 |       |   |
+| 2022.11.22 | 电影   | 『映画かいけつゾロリ　ラララ♪スターたんじょう』完成披露上映会   |       |        |
 | 2022.11.26 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.11.28 | 电视剧   | 富士电视台『PICU 小児集中治療室』#8 21:00~   |       |                      |
 | 2022.12.3   | FC      | 『Erika Ikuta 2022 winter fun』Zepp Osaka Bayside（OSAKA）OPEN 13:00 / START 14:00   |    |    |
