--- a/docs/years/2023.md
+++ b/docs/years/2023.md
@@ -13,3 +13,5 @@ sidebar_position: 2
 | 2023.1.30 | 音乐剧  | 『MEAN GIRLS』【東京】東京建物 Brillia HALL（豊島区立芸術文化劇場）(～ 2.12) |         | [详细日程](https://musical-meangirls.jp/schedule.html#tokyo) |
 | 2023.2.17 | 音乐剧  | 『MEAN GIRLS』【福岡】キャナルシティ劇場(～ 2.19)                       |         | [详细日程](https://musical-meangirls.jp/schedule.html#fukuoka)  |
 | 2023.2.23 | 音乐剧  | 『MEAN GIRLS』【大阪】森ノ宮ピロティホール(～ 2.27)               |         |  [详细日程](https://musical-meangirls.jp/schedule.html#osaka)|
+| 2023.4 | 音乐剧  | 『GYPSY』【東京】東京芸術劇場プレイハウス              |         |  [mdpr](https://mdpr.jp/news/detail/3448509)|
+| 2023.5 | 音乐剧  | 『GYPSY』【大阪、愛知、福岡】            |         |  [mdpr](https://mdpr.jp/news/detail/3448509)|
