--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -174,11 +174,11 @@ sidebar_position: 1
 | 2022.11.1  | 杂志   | 『ステージぴあ』11+12月号 |    [ebook](https://t.pia.jp/pia/events/stagepia)    |   |
 | 2022.11.4   | 番组    | 熱狂！1/365のマニアさん 19:00～    |   [生](https://www.bilibili.com/video/BV1NG4y187k4)   |               |
 | 2022.11.5 | 音乐   | 『Venue101』#18 MC 23:00~ 嘉宾:日向坂46『月と星が踊るMidnight』 藤原さくら『まばたき』 緑黄色社会『ミチヲユケ』  | [蓝cut](https://www.bilibili.com/video/BV18e411F7ko)      |     [生](https://www.bilibili.com/video/BV15K411m7U6)   |
-| 2022.11.7 | 电视剧   | 富士电视台『PICU 小児集中治療室』#5 21:00~   |       |                      |
-| 2022.11.12 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
+| 2022.11.7 | 电视剧   | 富士电视台『PICU 小児集中治療室』#5 21:00~   | [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)  |                      |
+| 2022.11.12 | 音乐   | 『Venue101』#19 MC 23:00~ 嘉宾:QUEENDOM『チキチキバンバン』 THE SUPER FRUIT『チグハグ』 wacci『恋だろ』|  [生](https://www.bilibili.com/video/BV1V24y127tX)      |                      |
 | 2022.11.14 | 电视剧   | 富士电视台『PICU 小児集中治療室』#6 21:00~   |       |                      |
 | 2022.11.17 | 番组    | VS魂 19:00～    |                                     |               |
-| 2022.11.19 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
+| 2022.11.19 | 音乐   | 『Venue101』#20 MC 23:00~   |        |                      |
 | 2022.11.21 | 电视剧   | 富士电视台『PICU 小児集中治療室』#7 21:00~   |       |                      |
 | 2022.11.22  | 杂志   | 『美的』1月号 |       |   |
 | 2022.11.22 | 电影   | 『映画かいけつゾロリ　ラララ♪スターたんじょう』完成披露上映会   |       |        |
