--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -178,19 +178,23 @@ sidebar_position: 1
 | 2022.11.7 | 电视剧   | 富士电视台『PICU 小児集中治療室』#5 21:00~   | [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)  |                      |
 | 2022.11.12 | 音乐   | 『Venue101』#19 MC 23:00~ 嘉宾:QUEENDOM『チキチキバンバン』 THE SUPER FRUIT『チグハグ』 wacci『恋だろ』|  [生](https://www.bilibili.com/video/BV1V24y127tX)      |                      |
 | 2022.11.13 | 电视剧   | 『PICU 小児集中治療室』吉沢亮×高杉真宙×生田絵梨花×菅野莉央 座談会Part①   |   [生](https://pan.baidu.com/s/1ByBvVLm3Wyl8xU-Bc1-7hQ?pwd=0122 )    | [油管](https://www.youtube.com/watch?v=B9WfzJ67aAQ) |
-| 2022.11.14 | 电视剧   | 富士电视台『PICU 小児集中治療室』#6 21:00~   |       |                      |
+| 2022.11.14 | 电视剧   | 富士电视台『PICU 小児集中治療室』#6 21:00~   | [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)  |                      |
 | 2022.11.17 | 番组    | VS魂 19:00～    |                                     |               |
 | 2022.11.19 | 音乐   | 『Venue101』#20 MC 23:00~   |        |                      |
 | 2022.11.21 | 电视剧   | 富士电视台『PICU 小児集中治療室』#7 21:00~   |       |                      |
 | 2022.11.22  | 杂志   | 『美的』1月号 |       |   |
 | 2022.11.22 | 电影   | 『映画かいけつゾロリ　ラララ♪スターたんじょう』完成披露上映会   |       |        |
+| 2022.11.22 | 番组    | 1億人の大質問!?笑ってコラえて!3時間SP 吹奏楽の旅2022完結編 第1弾(预告) 22:54～23:00   |                                     |               |
+| 2022.11.23 | 番组    | 1億人の大質問!?笑ってコラえて!3時間SP 吹奏楽の旅2022完結編 第1弾 19:00〜21:54   |                                     |               |
 | 2022.11.26 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.11.28 | 电视剧   | 富士电视台『PICU 小児集中治療室』#8 21:00~   |       |                      |
 | 2022.12.3   | FC      | 『Erika Ikuta 2022 winter fun』Zepp Osaka Bayside（OSAKA）OPEN 13:00 / START 14:00   |    |    |
 | 2022.12.3 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.12.7 | 音乐   | 『映画かいけつゾロリ ラララ♪スターたんじょう オリジナルサウンドトラック＋α』発売＆配信決定   |        |   [链接](https://columbia.jp/prod-info/COCX-41936/)                   |
+| 2022.12.7 | 音乐   | 『2022FNS歌謡祭』 18:30〜23:28   |        |                      |
 | 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
 | 2022.12.10 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.12.11   | FC      | 『Erika Ikuta 2022 winter fun』KT Zepp Yokohama（YOKOHAMA）OPEN 14:00 / START 15:00   |    |    |
 | 2022.12.11   | FC      | 『Erika Ikuta 2022 winter fun』KT Zepp Yokohama（YOKOHAMA）OPEN 18:00 / START 19:00  |    |    |
+| 2022.12.14 | 音乐   | 『2022FNS歌謡祭』 18:30〜23:03   |        |                      |
 | 2022.12.16 | 电影    | 『Dr.コトー診療所』劇場版上映   |    | [周刊 FLASH](https://weibo.com/5177703789/LyH23DhYx) [日刊 sports](https://weibo.com/5177703789/M7t650QM9) [评论翻译](https://weibo.com/5177703789/M7vYY0MzB) |
