--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -179,12 +179,12 @@ sidebar_position: 1
 | 2022.11.12 | 音乐   | 『Venue101』#19 MC 23:00~ 嘉宾:QUEENDOM『チキチキバンバン』 THE SUPER FRUIT『チグハグ』 wacci『恋だろ』|  [生](https://www.bilibili.com/video/BV1V24y127tX)      |                      |
 | 2022.11.13 | 电视剧   | 『PICU 小児集中治療室』吉沢亮×高杉真宙×生田絵梨花×菅野莉央 座談会Part①   |   [生](https://pan.baidu.com/s/1ByBvVLm3Wyl8xU-Bc1-7hQ?pwd=0122 )    | [油管](https://www.youtube.com/watch?v=B9WfzJ67aAQ) |
 | 2022.11.14 | 电视剧   | 富士电视台『PICU 小児集中治療室』#6 21:00~   | [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)  |                      |
-| 2022.11.17 | 番组    | VS魂 19:00～    |                                     |               |
+| 2022.11.17 | 番组    | VS魂 19:00～    | [生](https://www.bilibili.com/video/BV1cG4y147Wg)   |               |
 | 2022.11.19 | 音乐   | 『Venue101』#20 MC 23:00~   |        |                      |
 | 2022.11.21 | 电视剧   | 富士电视台『PICU 小児集中治療室』#7 21:00~   |       |                      |
 | 2022.11.22  | 杂志   | 『美的』1月号 |       |   |
 | 2022.11.22 | 电影   | 『映画かいけつゾロリ　ラララ♪スターたんじょう』完成披露上映会   |       |        |
-| 2022.11.22 | 番组    | 1億人の大質問!?笑ってコラえて!3時間SP 吹奏楽の旅2022完結編 第1弾(预告) 22:54～23:00   |                                     |               |
+| 2022.11.22 | 番组    | 明日よる7時は…吹奏楽の旅2022完結編 第1弾 22:54～23:00   |                                     |               |
 | 2022.11.23 | 番组    | 1億人の大質問!?笑ってコラえて!3時間SP 吹奏楽の旅2022完結編 第1弾 19:00〜21:54   |                                     |               |
 | 2022.11.26 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.11.28 | 电视剧   | 富士电视台『PICU 小児集中治療室』#8 21:00~   |       |                      |
