--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -180,6 +180,7 @@ sidebar_position: 1
 | 2022.11.13 | 电视剧   | 『PICU 小児集中治療室』吉沢亮×高杉真宙×生田絵梨花×菅野莉央 座談会Part①   |   [生](https://pan.baidu.com/s/1ByBvVLm3Wyl8xU-Bc1-7hQ?pwd=0122 )    | [油管](https://www.youtube.com/watch?v=B9WfzJ67aAQ) |
 | 2022.11.14 | 电视剧   | 富士电视台『PICU 小児集中治療室』#6 21:00~   | [熟](http://www.laowang666.com.cn/ProDetail.aspx?ProId=1655)  |                      |
 | 2022.11.17 | 番组    | VS魂 19:00～    | [生](https://www.bilibili.com/video/BV1cG4y147Wg)   |               |
+| 2022.11.18 | 采访    | 生田絵梨花が感じる舞台の魅力「作品が育っていくような感覚」  | [生](https://ovo.kyodo.co.jp/interview/a-1818452)   |               |
 | 2022.11.19 | 音乐   | 『Venue101』#20 MC 23:00~   |        |                      |
 | 2022.11.21 | 电视剧   | 富士电视台『PICU 小児集中治療室』#7 21:00~   |       |                      |
 | 2022.11.22  | 杂志   | 『美的』1月号 |       |   |
