--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -189,11 +189,12 @@ sidebar_position: 1
 | 2022.11.23 | 番组    | 1億人の大質問!?笑ってコラえて!3時間SP 吹奏楽の旅2022完結編 第1弾 19:00〜21:54   |                                     |               |
 | 2022.11.26 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.11.28 | 电视剧   | 富士电视台『PICU 小児集中治療室』#8 21:00~   |       |                      |
+| 2022.12.1 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』舞台挨拶付きTOHOシネマズ日本橋 18:15~   |                          |           |
 | 2022.12.3   | FC      | 『Erika Ikuta 2022 winter fun』Zepp Osaka Bayside（OSAKA）OPEN 13:00 / START 14:00   |    |    |
 | 2022.12.3 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.12.7 | 音乐   | 『映画かいけつゾロリ ラララ♪スターたんじょう オリジナルサウンドトラック＋α』発売＆配信決定   |        |   [链接](https://columbia.jp/prod-info/COCX-41936/)                   |
 | 2022.12.7 | 音乐   | 『2022FNS歌謡祭』 18:30〜23:28   |        |                      |
-| 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
+| 2022.12.9 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』上映   |                          |      [情报公开](https://weibo.com/5177703789/LEb1tupaf)          |
 | 2022.12.10 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.12.11   | FC      | 『Erika Ikuta 2022 winter fun』KT Zepp Yokohama（YOKOHAMA）OPEN 14:00 / START 15:00   |    |    |
 | 2022.12.11   | FC      | 『Erika Ikuta 2022 winter fun』KT Zepp Yokohama（YOKOHAMA）OPEN 18:00 / START 19:00  |    |    |
