--- a/docs/years/2022.md
+++ b/docs/years/2022.md
@@ -187,6 +187,8 @@ sidebar_position: 1
 | 2022.11.22 | 电影   | 『映画かいけつゾロリ　ラララ♪スターたんじょう』完成披露上映会   |       |        |
 | 2022.11.22 | 番组    | 明日よる7時は…吹奏楽の旅2022完結編 第1弾 22:54～23:00   |                                     |               |
 | 2022.11.23 | 番组    | 1億人の大質問!?笑ってコラえて!3時間SP 吹奏楽の旅2022完結編 第1弾 19:00〜21:54   |                                     |               |
+| 2022.11.24 | 杂志   | 「スカパー!TVガイドBS＋CS」インタビュー  |        |                      |
+| 2022.11.24 | 杂志   | 「スカパー!TVガイドプレミアム」インタビュー |        |                      |
 | 2022.11.26 | 音乐   | 『Venue101』# MC 23:00~   |        |                      |
 | 2022.11.28 | 电视剧   | 富士电视台『PICU 小児集中治療室』#8 21:00~   |       |                      |
 | 2022.12.1 | 电影   | 『映画かいけつゾロリ ラララ♪スターたんじょう』舞台挨拶付きTOHOシネマズ日本橋 18:15~   |                          |           |
